2016-11-07  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/GameState.cpp (drawOverlay): handle mFpsGeometry.
	* src/client/GameEngine.cpp (mFpsGeometry): remove all occurences.

	* src/client/GameState.cpp (drawOverlay): handle mVersionGeometry.
	* src/client/GameEngine.cpp (mVersionGeometry): remove all occurences.

2016-11-05  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/GameEngine.cpp (mLogoGeometry): remove all occurences.
	* src/client/GameState.cpp (enter): create mLogoGeometryBuffer here.
	* src/client/GameState.cpp (drawOverlay): override game state function.
	* src/client/MainMenu.hpp (mLogoGeometry): new member definition
	here.
	* src/client/GameEngine.hpp (getOgreRenderer): new getter added.
	* src/client/GameEngine.cpp (overlayHandler): call the
	* src/client/GameEngine.cpp (overlayHandler): call the
	GameState::drawOverlay function for actual game state.
	* src/client/GameState.cpp (drawOverlay): implement an empty virtual
	callback.

2016-11-04  Jérôme Pasquier  <rainbru@free.fr>

	* ROADMAP: create a new 'client work/game state' section.
	* src/client/GameEngine.cpp: remoev NyiDialog header inclusion.
	* src/client/MainMenu.cpp (onOptions): move GameEngine's function
	here.

	* src/client/MainMenu.cpp (onNetworkPlay): use a NyiDialog.

	* src/client/GameEngine.cpp (onLocalTest): move to MainMenu.cpp.

2016-11-02  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/GameState.cpp (onExit): peacefully shutdown GameEngine.
	* src/client/GameEngine.cpp (onExit): replace with a public
	shutdown() function.

	* src/client/GameState.cpp (addEvent): find a one-liner to
	subscribe to CEGUI event.

	* src/client/GameState.hpp (loadLayout): simpler way to load a CEGUI
	layout file.
	* src/client/GameState.hpp: add mRoot member.

2016-11-01  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/MainMenu.cpp (enter): create the menu.layout.

	* src/client/MainMenu.cpp: create new class.

	* src/client/StateManager.cpp (StateManager): GameEngine pointer comes