@@ -103,6 +103,7 @@ Error is fixed, was due to a src/services/Services.hpp old code
   way Oger does it. This way, at next startup, the Ogre config dialog
   would be defaulted to in-game options.
 **** TODO GameState system switch and more client work
+     CLOCK: [2016-11-07 lun. 00:51]--[2016-11-07 lun. 01:10] =>  0:19
      CLOCK: [2016-11-07 lun. 00:13]--[2016-11-07 lun. 00:47] =>  0:34
      CLOCK: [2016-11-06 dim. 23:46]--[2016-11-07 lun. 00:10] =>  0:24
      CLOCK: [2016-11-05 sam. 02:50]--[2016-11-05 sam. 04:56] =>  2:06
@@ -123,9 +124,11 @@ Error is fixed, was due to a src/services/Services.hpp old code
       - [X] VersionGeometry
       - [X] FpsGeometry
 	Not shown because have no text
-  - [ ] How to deal with the 1 second update ?
-    - [ ] Maybe a oneSecondUpdate() function in GameState ?
+  - [-] How to deal with the 1 second update ?
+    - [-] Maybe a oneSecondUpdate() function in GameState ?
       or a hudUpdate callback()
+      - [X] Cerate an empty callback in Gamestate
+      - [X] Override it in MainMenu
       - [ ] Remove the mFpsGeometry "no update slot" text
       - [ ] Make the actual CEGUI::Font used for drawing text an instance member
   - [ ] Try to make geometrybuffer's clipping	rectangle more little
