@@ -354,10 +354,13 @@ GameEngine::overlayHandler(const CEGUI::EventArgs& args)
     mCurrentState->drawOverlay();
     
 
-    /*
     // Update FPS stats every second
     if (mTimer.getMilliseconds() > 1000)
       {
+	mCurrentState->hudUpdate();
+	mTimer.reset();
+      }
+    /*
 	CEGUI::Font* fnt = &CEGUI::FontManager::getSingleton().
 	  get("DejaVuSans-12");
 	CEGUI::Colour c = CEGUI::Colour(0xFFFFFFFF);
@@ -372,13 +375,7 @@ GameEngine::overlayHandler(const CEGUI::EventArgs& args)
 
 	os3 << "Last FPS : " << mWindow->getLastFPS ();
 	fnt->drawText(*mFpsGeometry, os3.str(), CEGUI::Vector2f(0, 40.0), 0, c);
-
-	mTimer.reset();
-      }
     */	
-    //    mFpsGeometry->draw();
-
-    
     return true;
 }
 
